--- a/aset-digital/free/spatial-data.html
+++ b/aset-digital/free/spatial-data.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dataset Batas Administrasi Indonesia 2024 | Lontara Free Resources</title>
+    <title>WebGIS Basic Template | Lontara Free Resources</title>
 
     <link rel="icon" type="image/png" href="../../assets/images/favicon.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="../../css/theme.css" />
     <link rel="stylesheet" href="../../css/layout.css" />
@@ -16,7 +19,7 @@
     <style>
       /* --- HERO SECTION: Memberikan jarak aman dari Header --- */
       .resource-header {
-        padding: 220px 0 140px; 
+        padding: 220px 0 140px; /* Padding atas ekstra untuk keamanan sticky header */
         text-align: left;
         background: linear-gradient(to bottom, #f8fafc, #f1f5f9);
         border-bottom: 1px solid var(--border);
@@ -28,7 +31,7 @@
         padding: 12px 24px;
         border-radius: 12px;
         font-size: 0.9rem;
-        margin-bottom: 50px; 
+        margin-bottom: 50px; /* Jarak lega ke judul utama */
         display: inline-flex;
         align-items: center;
         gap: 12px;
@@ -47,15 +50,15 @@
         background: white;
         border: 1px solid var(--border);
         border-radius: 24px;
-        padding: 80px 70px; 
+        padding: 80px 70px; /* Padding internal luas untuk estetika premium */
         box-shadow: 0 40px 80px -15px rgba(0, 0, 0, 0.05);
-        margin-top: 80px; 
+        margin-top: 80px; /* Jarak positif stabil agar tidak terpotong */
         position: relative;
         z-index: 10;
         display: flex;
         flex-wrap: wrap;
         gap: 80px;
-        align-items: flex-start;
+        align-items: center;
       }
 
       .download-info {
@@ -65,7 +68,7 @@
 
       .download-info h2 {
         color: var(--primary);
-        margin-bottom: 45px; 
+        margin-bottom: 45px; /* Pemisah visual yang jelas antara judul dan isi */
         font-size: 2.2rem;
         font-weight: 800;
         letter-spacing: -1px;
@@ -89,42 +92,6 @@
         font-weight: 900;
         font-size: 1.4rem;
         margin-top: -3px;
-      }
-
-      /* --- PREVIEW GRID (PETA TIDAK TERPOTONG) --- */
-      .preview-grid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-        margin: 40px 0;
-      }
-      .preview-item {
-        background: #f8fafc;
-        border: 1px solid var(--border);
-        border-radius: 16px;
-        overflow: hidden;
-      }
-      .preview-img-container {
-        height: 180px;
-        background: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 10px;
-      }
-      .preview-img-container img {
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: contain; /* Peta utuh tanpa terpotong */
-      }
-      .preview-caption {
-        padding: 10px;
-        font-size: 0.85rem;
-        font-weight: 800;
-        text-align: center;
-        color: var(--primary);
-        background: #f8fafc;
-        border-top: 1px solid var(--border);
       }
 
       /* --- ACTION PANEL: Simetris & Fokus --- */
@@ -157,7 +124,7 @@
         font-weight: 800;
         text-decoration: none;
         display: block;
-        margin-bottom: 15px;
+        margin-bottom: 20px;
         transition: 0.3s;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
       }
@@ -186,13 +153,80 @@
       }
 
       @media (max-width: 992px) {
-        .download-box { padding: 50px 30px; gap: 40px; margin-top: 40px; }
-        .preview-grid { grid-template-columns: 1fr; }
-        .download-action { width: 100%; flex: none; }
-        .resource-header { padding: 180px 0 80px; }
+        .download-box {
+          padding: 50px 30px;
+          gap: 40px;
+          margin-top: 40px;
+        }
+        .download-action {
+          width: 100%;
+          flex: none;
+        }
+        .resource-header {
+          padding: 180px 0 80px;
+        }
       }
     </style>
   </head>
+
+  <body>
+    <div class="nav-overlay" id="nav-overlay"></div>
+
+    <header class="header" id="header">
+      <div class="progress-bar" id="progress-bar"></div>
+      <div class="container nav-container">
+        <div class="logo">
+          <a href="../../beranda.html">
+            <img
+              src="../../assets/images/logo.png"
+              alt="Lontara Logo"
+              width="120"
+              height="38"
+            />
+          </a>
+        </div>
+        <nav class="nav" id="nav-menu">
+          <button class="nav-close" id="nav-close">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <line x1="18" y1="6" x2="6" y2="18"></line>
+              <line x1="6" y1="6" x2="18" y2="18"></line>
+            </svg>
+          </button>
+          <div class="nav-item">
+            <a href="../../layanan/layanan.html">Layanan</a>
+          </div>
+          <div class="nav-item">
+            <a href="../../portofolio/portofolio.html">Portofolio</a>
+          </div>
+          <div class="nav-item">
+            <a href="../../artikel/artikel.html">Artikel</a>
+          </div>
+          <div class="nav-item">
+            <a href="../../publikasi/publikasi.html">Publikasi</a>
+          </div>
+          <div class="nav-item">
+            <a href="../aset-digital.html" class="active">Aset Digital</a>
+          </div>
+          <div class="nav-item">
+            <a href="../../tentang/tentang.html">Tentang</a>
+          </div>
+          <div class="nav-item nav-item-cta">
+            <a href="../../kontak/kontak.html" class="nav-link-cta">Kontak</a>
+          </div>
+        </nav>
+        <button class="nav-toggle" id="nav-toggle">
+          <span></span><span></span><span></span>
+        </button>
+      </div>
+    </header>
+
 
   <body>
     <div class="nav-overlay" id="nav-overlay"></div>
@@ -312,3 +346,4 @@
     <script src="../../js/main.js"></script>
   </body>
 </html>
+
