--- a/aset-digital/free/spatial-data.html
+++ b/aset-digital/free/spatial-data.html
@@ -197,17 +197,37 @@
   <body>
     <div class="nav-overlay" id="nav-overlay"></div>
 
+ 
+  <body>
+    <div class="nav-overlay" id="nav-overlay"></div>
+
     <header class="header" id="header">
       <div class="progress-bar" id="progress-bar"></div>
       <div class="container nav-container">
         <div class="logo">
-          <a href="../../beranda.html">
-            <img src="../../assets/images/logo.png" alt="Lontara Logo" width="120" height="38" />
+          <a href="../beranda.html">
+            <img
+              src="../assets/images/logo.png"
+              alt="Lontara Logo"
+              width="120"
+              height="38"
+            />
           </a>
         </div>
+
         <nav class="nav" id="nav-menu">
-          <button class="nav-close" id="nav-close">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+          <button class="nav-close" id="nav-close" aria-label="Tutup Menu">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <line x1="18" y1="6" x2="6" y2="18"></line>
+              <line x1="6" y1="6" x2="18" y2="18"></line>
+            </svg>
           </button>
           <div class="nav-item"><a href="../../layanan/layanan.html">Layanan</a></div>
           <div class="nav-item"><a href="../../portofolio/portofolio.html">Portofolio</a></div>
@@ -312,3 +332,4 @@
     <script src="../../js/main.js"></script>
   </body>
 </html>
+
